--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,7 @@
 spring.data.mongodb.database=presentation
-
 security.basic.enabled=false
-
 spring.data.rest.base-path=api
+graphql.servlet.mapping=graphql
+graphql.servlet.enabled=true
+graphql.servlet.corsEnabled=enabled
+
