--- a/build.gradle
+++ b/build.gradle
@@ -1,9 +1,10 @@
 buildscript {
     ext {
-        springBootVersion = '1.4.1.RELEASE'
+        springBootVersion = '2.0.6.RELEASE'
     }
     repositories {
         mavenCentral()
+        jcenter()
     }
     dependencies {
 		classpath("org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}")
@@ -18,13 +19,14 @@ plugins {
 apply plugin: 'java'
 apply plugin: 'eclipse'
 apply plugin: 'idea'
-apply plugin: 'spring-boot'
+apply plugin: 'org.springframework.boot'
+apply plugin: 'io.spring.dependency-management'
 apply plugin: "application"
 
-mainClassName = "com.tenoch.presentation.WebPresentationApplication"
+mainClassName = "com.tenoch.presentation.NotesApiApplication"
 
 jar {
-    baseName = 'webPresentation'
+    baseName = 'notesapi'
     version = '0.0.1-SNAPSHOT'
 }
 
@@ -38,20 +40,9 @@ repositories {
 dependencies {
     compile('org.springframework.boot:spring-boot-starter-data-mongodb')
     compile('org.springframework.boot:spring-boot-starter-security')
-    compile('org.springframework.boot:spring-boot-starter-thymeleaf')
     compile('org.springframework.boot:spring-boot-starter-web')
+    compile('com.graphql-java-kickstart:graphql-spring-boot-starter:5.0.5')
+    compile('com.graphql-java-kickstart:graphiql-spring-boot-starter:5.0.5')
+    compile('com.graphql-java-kickstart:voyager-spring-boot-starter:5.0.5')
     testCompile('org.springframework.boot:spring-boot-starter-test')
 }
-
-eclipse {
-    classpath {
-         containers.remove('org.eclipse.jdt.launching.JRE_CONTAINER')
-         containers 'org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8'
-    }
-}
-
-task wrapper(type: Wrapper) {
-    gradleVersion = '2.7'
-}
-
-
